Fix table on mobile

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -75,6 +75,11 @@ pre, pre code, pre code * {
   .tooltip::after {
     display: none !important;
   }
+  table {
+    overflow-x: auto;
+    display: block;
+    white-space: nowrap;
+  }
 }
 
 p {
